--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,6 @@
 	"author": "JaewonE",
 	"authorUrl": "https://github.com/jaewonE",
 	"fundingUrl": "https://github.com/jaewonE",
+	"repo": "jaewonE/obsidian-checkbox-styling-helper",
 	"isDesktopOnly": true
 }
