--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Checkbox styling helper",
 	"version": "1.0.2",
 	"minAppVersion": "0.15.0",
-	"description": "Obsidian plugin that helps you styling checkboxes in preview mode.",
+	"description": "Helps you styling checkboxes in preview mode.",
 	"author": "JaewonE",
 	"authorUrl": "https://github.com/jaewonE",
 	"fundingUrl": "https://github.com/jaewonE",
